Fixed install script and gitignore and CMakeLists to build with eigen library

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_subdirectory("tests")
 
+find_package(Eigen3 3.3 REQUIRED)
+
 add_executable(main main.cpp)
 
 add_library(burgers_rewienski burgers_rewienski.cpp)
@@ -8,5 +10,6 @@ target_link_libraries(
     main 
     tests
     burgers_rewienski
+    Eigen3::Eigen
 )
 
