Initial implementation of LSPG-ROM solver, not working due to dummy residual and jacobian implementations.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,7 @@ add_executable(main main.cpp)
 
 add_library(burgers_rewienski burgers_rewienski.cpp)
 add_library(snapshots snapshots.cpp)
+add_library(galerkin_projection_rom galerkin_projection_rom.cpp)
 
 target_link_libraries(
     main 
@@ -13,5 +14,6 @@ target_link_libraries(
     burgers_rewienski
     Eigen3::Eigen
     snapshots
+    galerkin_projection_rom
 )
 
