Changed BurgersRewienski to use Eigen vectors and matrices, made residual and jacobian functions compatible with calculation for the reduced order model. Began implementing the ROM. Code currently runs but reduced residual does not converge, gets stuck in an infinite loop in the line search.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,19 +1,24 @@
 add_subdirectory("tests")
+add_subdirectory("misc")
 
 find_package(Eigen3 3.3 REQUIRED)
 
 add_executable(main main.cpp)
 
 add_library(burgers_rewienski burgers_rewienski.cpp)
+
 add_library(snapshots snapshots.cpp)
-add_library(galerkin_projection_rom galerkin_projection_rom.cpp)
+
+add_library(LSPG_ROM galerkin_projection_rom.cpp)
+
 
 target_link_libraries(
     main 
     tests
     burgers_rewienski
     Eigen3::Eigen
+    misc
     snapshots
-    galerkin_projection_rom
+    LSPG_ROM
 )
 
